--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
+    "agora-rtc-react": "^1.1.3",
+    "daisyui": "^2.24.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
