--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "agora-rtc-react": "^1.1.3",
+    "axios": "^0.27.2",
     "daisyui": "^2.24.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
