--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "agora-rtc-react": "^1.1.3",
     "axios": "^0.27.2",
     "daisyui": "^2.24.0",
+    "jotai": "^1.8.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "next-themes": "^0.2.0",
