--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
+    "agora-access-token": "^2.0.4",
     "agora-rtc-react": "^1.1.3",
     "axios": "^0.27.2",
     "daisyui": "^2.24.0",
