--- a/package.json
+++ b/package.json
@@ -10,40 +10,41 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.2.1",
-    "@tanstack/react-query": "^4.19.0",
-    "@trpc/client": "^10.4.2",
-    "@trpc/next": "^10.4.2",
-    "@trpc/react-query": "^10.4.2",
-    "@trpc/server": "^10.4.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.2",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "agora-access-token": "^2.0.4",
     "agora-rtc-react": "^1.1.3",
+    "agora-token": "^2.0.3",
     "axios": "^0.27.2",
-    "daisyui": "^2.24.0",
-    "jotai": "^1.8.1",
+    "daisyui": "^2.52.0",
+    "jotai": "^1.13.1",
     "next": "12.2.5",
-    "next-auth": "^4.10.3",
-    "next-themes": "^0.2.0",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "superjson": "^1.11.0",
-    "zod": "^3.19.1"
+    "react-icons": "^4.12.0",
+    "superjson": "^1.13.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.8",
-    "cz-git": "^1.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.19",
+    "cz-git": "^1.9.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "prisma": "^4.2.1",
-    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.38",
+    "prisma": "^4.16.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "4.7.4"
   },
   "ct3aMetadata": {
